--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-data-pipelines-with-apache-airflow/
+.venv/
+__pycache__/
+*.pyc
+airflow.db
+airflow.db-shm
+airflow.db-wal
+logs/
+airflow-webserver.pid
+*.log
